[gd_scene load_steps=7 format=3 uid="uid://ly3tkljwfa8m"]

[ext_resource type="PackedScene" uid="uid://beqhq1817oav7" path="res://demo/demo_2d/wall/wall.tscn" id="1_orey4"]
[ext_resource type="Script" uid="uid://ixphgyc2vqpk" path="res://demo/demo_2d/demo_scene_2d/demo_scene_2d.gd" id="1_s3u83"]
[ext_resource type="PackedScene" uid="uid://dcidp3ukia16q" path="res://demo/demo_2d/turret/gdscript/turret_2d_gdscript.tscn" id="2_kwcv7"]
[ext_resource type="PackedScene" uid="uid://c561j8bdsy66w" path="res://demo/demo_2d/player_2d/player_2d.tscn" id="3_e1cyj"]
[ext_resource type="PackedScene" uid="uid://cyeydvona6yuj" path="res://demo/demo_2d/menu/menu.tscn" id="5_bh43b"]
[ext_resource type="PackedScene" uid="uid://dyhohsn75nnvd" path="res://demo/demo_2d/turret/CSharp/Turret2DCSharp.tscn" id="5_reg2c"]

[node name="DemoScene2D" type="Node2D" node_paths=PackedStringArray("player", "turret_gdscript", "turret_csharp")]
script = ExtResource("1_s3u83")
player = NodePath("Player2D")
turret_gdscript = NodePath("Turret2DGDScript")
turret_csharp = NodePath("Turret2DCSharp")

[node name="Walls" type="Node2D" parent="."]

[node name="ButtomWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(0, 1296)

[node name="RightWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(2304, 0)
rotation = -1.5708

[node name="TopWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(0, -1296)
rotation = 3.14159

[node name="LeftWall" parent="Walls" instance=ExtResource("1_orey4")]
position = Vector2(-2304, 0)
rotation = 1.5708

[node name="Player2D" parent="." instance=ExtResource("3_e1cyj")]
unique_name_in_owner = true
position = Vector2(0, 256)

[node name="Turret2DGDScript" parent="." instance=ExtResource("2_kwcv7")]

[node name="Turret2DCSharp" parent="." node_paths=PackedStringArray("Player") instance=ExtResource("5_reg2c")]
Player = NodePath("../Player2D")

[node name="Menu" parent="." instance=ExtResource("5_bh43b")]

[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PlayerSpeed" to="." method="_on_player_speed_value_changed"]
[connection signal="text_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/PlayerAccelerateVectorX" to="." method="_on_player_accelerate_vector_x_text_changed"]
[connection signal="text_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/PlayerAccelerateVectorY" to="." method="_on_player_accelerate_vector_y_text_changed"]
[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ProjectileSpeed" to="." method="_on_projectile_speed_value_changed"]
[connection signal="text_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/ProjectileAccelerateVectorX" to="." method="_on_projectile_accelerate_vector_x_text_changed"]
[connection signal="text_changed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4/ProjectileAccelerateVectorY" to="." method="_on_projectile_accelerate_vector_y_text_changed"]

[editable path="Menu"]
